Refactorizacion de ProfessionalServiceImpl y agregando DirectionDTO