@@ -1,7 +1,6 @@
 package cohorte16.homeservice.services.impl;
 
 import cohorte16.homeservice.dtos.ProfessionalDTO;
-import cohorte16.homeservice.exceptions.EntityNotSavedException;
 import cohorte16.homeservice.mappers.ProfessionalMapper;
 import cohorte16.homeservice.models.Professional;
 import cohorte16.homeservice.models.User;
@@ -10,12 +9,10 @@ import cohorte16.homeservice.repositories.UserRepository;
 import cohorte16.homeservice.services.ProfessionalService;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
+import org.hibernate.service.spi.ServiceException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 
 @Service
 @Transactional
@@ -34,56 +31,60 @@ public class ProfessionalServiceImpl implements ProfessionalService {
     }
 
     @Override
-    public List<ProfessionalDTO> findAll() throws Exception {
-       try {
-          List<Professional> professionalList = professionalRepository.findAll();
-           return professionalList.stream().map(professionalMapper::professionalToProfessionalDTO
-           ).collect(Collectors.toList());
-       }catch (Exception e){
-           throw new Exception(e.getMessage());
-       }
+    public List<ProfessionalDTO> findAll() {
+        List<ProfessionalDTO> professionalDTOs;
+        try {
+            List<Professional> professionalList = professionalRepository.findAll();
+            professionalDTOs = professionalList.stream()
+                       .map(professionalMapper::professionalToProfessionalDTO)
+                       .toList();
+           }catch (Exception e){
+                throw new ServiceException("Error occurred while fetching all professionals", e);
+        }
+        return professionalDTOs;
     }
 
     @Override
-    public ProfessionalDTO findById(Long id) throws Exception {
+    public ProfessionalDTO findById(Long id) {
         try {
-            Optional<Professional> professionalOptional = professionalRepository.findById(id);
-            if(professionalOptional.isEmpty()){
-                throw new EntityNotFoundException("User not found");
-            }
-            Professional professional =  professionalOptional.get();
+            Professional professional = professionalRepository.findById(id)
+                    .orElseThrow(() -> new EntityNotFoundException("Professional not found with id: " + id));
             return professionalMapper.professionalToProfessionalDTO(professional);
-        }catch (Exception e){
-            throw new Exception(e.getMessage());
+        } catch (EntityNotFoundException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new ServiceException("Error occurred while fetching professional with id: " + id, e);
         }
     }
 
     @Override
-    public ProfessionalDTO save(ProfessionalDTO professionalDTO) throws Exception {
+    public ProfessionalDTO save(ProfessionalDTO professionalDTO) {
         try {
             User userEntity = userRepository.findById(professionalDTO.user().getId())
-                    .orElseThrow(() -> new EntityNotFoundException("User not found"));
+                    .orElseThrow(() -> new EntityNotFoundException("User not found with id: " + professionalDTO.user().getId()));
             Professional professionalEntity = professionalMapper.professionalDTOToProfessional(professionalDTO);
             professionalEntity.setUser(userEntity);
             Professional professionalSaved = professionalRepository.save(professionalEntity);
             return professionalMapper.professionalToProfessionalDTO(professionalSaved);
-        }catch (Exception e){
-            throw new Exception(e.getMessage());
+        } catch (EntityNotFoundException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new ServiceException("Error occurred while saving professional", e);
         }
     }
 
     @Override
-    public ProfessionalDTO update(Long id, ProfessionalDTO professionalDTO) throws Exception {
+    public ProfessionalDTO update(Long id, ProfessionalDTO professionalDTO) {
         try {
-            Optional<Professional> professionalOptional = professionalRepository.findById(id);
-            if(professionalOptional.isEmpty()){
-                throw new EntityNotSavedException("User not found");
-            }
-            Professional professionalEntity = professionalMapper.professionalDTOToProfessional(professionalDTO);
-            Professional professionalUpdated = getProfessional(professionalEntity, professionalOptional);
-            return professionalMapper.professionalToProfessionalDTO(professionalUpdated);
-        }catch (Exception e){
-            throw new Exception(e.getMessage());
+            Professional existingProfessional = professionalRepository.findById(id)
+                    .orElseThrow(() -> new EntityNotFoundException("Professional not found with id: " + id));
+            Professional updatedProfessional = updateProfessionalFromDTO(existingProfessional, professionalDTO);
+            Professional savedProfessional = professionalRepository.save(updatedProfessional);
+            return professionalMapper.professionalToProfessionalDTO(savedProfessional);
+        } catch (EntityNotFoundException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new ServiceException("Error occurred while updating professional with id: " + id, e);
         }
     }
 
@@ -102,20 +103,17 @@ public class ProfessionalServiceImpl implements ProfessionalService {
         }
     }
 
-    private static Professional getProfessional(Professional professional,
-                                         Optional<Professional> professionalOptional) {
-        Professional professionalUpdated = professionalOptional.get();
-        professionalUpdated.setName(professional.getName());
-        professionalUpdated.setLastname(professional.getLastname());
-        professionalUpdated.setCbu(professional.getCbu());
-        professionalUpdated.setCuit(professional.getCuit());
-        professionalUpdated.setProfession(professional.getProfession());
-        professionalUpdated.setRating(professional.getRating());
-        professionalUpdated.setActive(professional.isActive());
-        professionalUpdated.setDirection(professional.getDirection());
-        professionalUpdated.setUser(professional.getUser());
-        professionalUpdated.setOrderList(professional.getOrderList());
-        return professionalUpdated;
+    public Professional updateProfessionalFromDTO(Professional existingProfessional,
+                                                  ProfessionalDTO professionalDTO) {
+        existingProfessional.setId(professionalDTO.id());
+        existingProfessional.setName(professionalDTO.name());
+        existingProfessional.setLastname(professionalDTO.lastname());
+        existingProfessional.setCuit(professionalDTO.cuit());
+        existingProfessional.setCbu(professionalDTO.cbu());
+        existingProfessional.setRating(professionalDTO.rating());
+        existingProfessional.setProfession(professionalDTO.profession());
+        existingProfessional.setDirection(professionalDTO.direction());
+        existingProfessional.setUser(professionalDTO.user());
+        return existingProfessional;
     }
-
 }
